# dtypist

./: .gitignore  Cargo.toml  FEATURE_PLAN_SOURCE_TEXT_FILES.md  INSTALL  Makefile.in  README  aclocal.m4  config.h.in  configure  configure-w32  test.txt  test_script.typ  test_welcome.sh
benches/: benchmarks.rs
doc/: Makefile.in  gtypist.cs.html  gtypist.cs.info  gtypist.es.html  gtypist.es.info  gtypist.html  gtypist.info  version.texi
lessons/: Makefile.in  gtypist.typ
m4/: Makefile  Makefile.in
po/: cs.gmo  cs.po  de.gmo  de.po  es.gmo  es.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  gtypist.pot  nl.gmo  nl.po  pl.gmo  pl.po  ro.gmo  ro.po  ru.gmo  ru.po  tr.gmo  tr.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
src/: Makefile.in  cmdline.c  cmdline.h  exercises.rs  gtypist.1  lib.rs  main.rs  menu.rs  performance.rs  test_display.rs  test_parser.rs
src/script/: commands.rs  executor.rs  mod.rs  parser.rs
tests/: integration_tests.rs
tests/integration/: baseline_tests.rs
tools/: Makefile.in
